Segmenter with layer normalization and resnet

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -1,14 +1,15 @@
 FROM tensorflow/tensorflow:2.9.1-jupyter
 
-COPY ./build_data/essay001.ann.conll.align ./essay001.ann.conll.align
+COPY ./build_data/ .
 COPY ./install_awesome_align_docker.sh ./install_awesome_align_docker.sh
 COPY ./install_spacy.sh ./install_spacy.sh
+COPY ./install_nltk_resources.sh ./install_nltk_resources.sh
 
 RUN pip install tensorflow-addons \
- && pip install nltk && python -m nltk.downloader popular \
+ && pip install nltk && python -m nltk.downloader popular && ./install_nltk_resources.sh && mv es-ancora.map ~/nltk_data/taggers/universal_tagset/es-ancora.map \
  && pip install pandas \
  && pip install scikit-learn \
  && pip install deep-translator \
  && ./install_awesome_align_docker.sh \
  && ./install_spacy.sh \
- && rm essay001.ann.conll.align install_awesome_align_docker.sh install_spacy.sh
+ && rm essay001.ann.conll.align install_awesome_align_docker.sh install_spacy.sh install_nltk_resources.sh
