--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,8 @@
     "dockerFile": "../Dockerfile",
     "extensions": [
         "ms-python.python"
+    ],
+    "forwardPorts": [
+        8501
     ]
 }
