--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -6,11 +6,12 @@ COPY ./install_spacy.sh ./install_spacy.sh
 COPY ./install_nltk_resources.sh ./install_nltk_resources.sh
 
 RUN pip install tensorflow-addons \
- && pip install nltk && python -m nltk.downloader popular && ./install_nltk_resources.sh && mv es-ancora.map ~/nltk_data/taggers/universal_tagset/es-ancora.map \
+ && pip install nltk && python -m nltk.downloader popular \
+ && chmod 777 install_nltk_resources.sh && ./install_nltk_resources.sh && mv es-ancora.map ~/nltk_data/taggers/universal_tagset/es-ancora.map \
  && pip install pandas \
  && pip install scikit-learn \
  && pip install deep-translator \
  && pip install streamlit \
- && ./install_awesome_align_docker.sh \
- && ./install_spacy.sh \
+ && chmod 777 install_awesome_align_docker.sh && ./install_awesome_align_docker.sh \
+ && chmod 777 install_spacy.sh && ./install_spacy.sh \
  && rm essay001.ann.conll.align install_awesome_align_docker.sh install_spacy.sh install_nltk_resources.sh
