--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -5,7 +5,8 @@ COPY ./install_awesome_align_docker.sh ./install_awesome_align_docker.sh
 COPY ./install_spacy.sh ./install_spacy.sh
 COPY ./install_nltk_resources.sh ./install_nltk_resources.sh
 
-RUN pip install tensorflow-addons \
+RUN python3 -m pip install --upgrade pip \
+ && pip install tensorflow-addons \
  && pip install nltk && python -m nltk.downloader popular \
  && chmod 777 install_nltk_resources.sh && bash install_nltk_resources.sh noancora && mv es-ancora.map ~/nltk_data/taggers/universal_tagset/es-ancora.map \
  && pip install pandas \
